# ros2-phone-sensors

./: .gitignore  README.md  requirements.txt
.github/workflows/: ros-ci.yaml
docs/: configuration_guide_server.md  imu_calibration.md  usb_serial_devices.md
src/mobile_webpage/: package.xml  setup.cfg  setup.py
src/mobile_webpage/mobile_webpage/: server.py
src/phone_as_a_robot/: package.xml  setup.cfg  setup.py
src/phone_as_a_robot/phone_as_a_robot/: server.py
src/phone_as_a_robot/templates/: index.html
src/phone_sensors/: package.xml  setup.cfg  setup.py
src/phone_sensors/phone_sensors/: message_converters.py  server.py
src/phone_sensors/templates/: index.html  test_video_permissions.html
src/phone_sensors_bridge/: package.xml  setup.cfg  setup.py
src/phone_sensors_bridge/phone_sensors_bridge/: message_converters.py  server.py
src/phone_sensors_bridge/scripts/: generate_dev_certificates.sh
src/phone_sensors_bridge/templates/: index.html  test_serial.html  test_video_permissions.html  test_web_usb.html
src/phone_sensors_bridge_examples/: package.xml  setup.cfg  setup.py
src/phone_sensors_bridge_examples/config/: all_sensors.rviz  gnss.rviz  imu.rviz  phone_sensors_bridge_localization.yaml  phone_sensors_bridge_server.yaml  ukf.rviz  (+2 more)
src/phone_sensors_examples/: package.xml  setup.cfg  setup.py
src/phone_sensors_examples/config/: all_sensors.rviz  gnss.rviz  imu.rviz  phone_sensors_localization.yaml  phone_sensors_server.yaml  ukf.rviz
src/phone_sensors_examples/launch/: phone_sensors_localization.launch.py  rviz.launch.py
(+20 files in other folders)
